// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SearchBar default 1`] = `
<RCTSafeAreaView
  paddingTop={0}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "borderWidth": 1,
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 22,
              "marginLeft": 6,
              "width": 22,
            },
          ]
        }
      />
      <TextInput
        allowFontScaling={false}
        autoCapitalize="none"
        autoCorrect={true}
        clearButtonMode="while-editing"
        keyboardAppearance="dark"
        keyboardType="default"
        onChangeText={[Function]}
        placeholder="Search"
        placeholderTextColor="#9b9b9b"
        returnKeyType="default"
        selectionColor="#657ef6"
        style={
          Array [
            Object {
              "flex": 1,
              "paddingBottom": 7,
              "paddingLeft": 6,
              "paddingRight": 6,
              "paddingTop": 7,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Storyshots SearchBar initial text 1`] = `
<RCTSafeAreaView
  paddingTop={0}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "borderWidth": 1,
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "width": 270,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 22,
                "marginLeft": 6,
                "width": 22,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={false}
          autoCapitalize="none"
          autoCorrect={true}
          clearButtonMode="while-editing"
          keyboardAppearance="dark"
          keyboardType="default"
          onChangeText={[Function]}
          placeholder="Search"
          placeholderTextColor="#9b9b9b"
          returnKeyType="default"
          selectionColor="#657ef6"
          style={
            Array [
              Object {
                "flex": 1,
                "paddingBottom": 7,
                "paddingLeft": 6,
                "paddingRight": 6,
                "paddingTop": 7,
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="exercise"
        />
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
